@@ -15,6 +15,7 @@ version 0.84.03
 	Handling two new jpeg image tones: CrossProcessing, Flat, Auto
 	Handling new white balance modes: MultiAuto, Manual2, Manual3, Kelvin1, Kelvin2, Kelvin3
 	--read_datetime
+	--read_firmware_version
 
 version 0.84.02 ( 2016-10-31 )
 	Android code cleanup
